@@ -1,3 +1,9 @@
+2015-08-23  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c: Coverity fixes:
+	  - get_mtu(): Drop useless goto and explicit zero return on error.
+	  - get_canonical(): safer string termination.
+
 2015-08-22  James Hunt  <james.hunt@ubuntu.com>
 
 	* src/procenv.h: Use __func__ rather than __FUNCTION__ to appease gcc 5.2.
